# rust-scraper

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
examples/: dtakolog_test.rs  dvr_test.rs  multi_account_test.rs  scrape_test.rs
src/: config.rs  error.rs  lib.rs  service.rs  traits.rs
src/dtakolog/: mod.rs  scraper.rs  types.rs
src/etc/: mod.rs  scraper.rs
