[package]
name = "scraper-service"
version = "0.1.0"
edition = "2021"
description = "ETC/Dtakologスクレイパーサービス"

[dependencies]
# ブラウザ自動化
# chromiumoxide: async/await対応のChrome DevTools Protocol クライアント
# _fetcher-native-tokio: native-tlsを使用（ring依存を回避）
chromiumoxide = { version = "0.8", default-features = false, features = ["tokio-runtime", "_fetcher-native-tokio"] }

# 非同期
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# tower Service
tower = "0.4"

# エラー
thiserror = "1"

# ログ
tracing = "0.1"

# シリアライズ
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 日時処理 (dtakolog用)
chrono = { version = "0.4", features = ["serde"] }

# Base64エンコード (dtakolog用 - デバッグスクリーンショット)
base64 = "0.22"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"

[[example]]
name = "scrape_test"
path = "examples/scrape_test.rs"

[[example]]
name = "multi_account_test"
path = "examples/multi_account_test.rs"

[[example]]
name = "dtakolog_test"
path = "examples/dtakolog_test.rs"
